# system-monitor

./: package-lock.json  package.json
.github/workflows/: main.yml
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/abi/: abi.proto
src-tauri/src/: main.rs  mod.rs  monitor.rs
src-tauri/src/pb/: abi.rs  mod.rs
src/components/: Greet.vue
