[package]
name = "system-monitor"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.11.6"
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["macos-private-api", "shell-open", "system-tray"] }
window-vibrancy = "0.3.2"
sysinfo = { version = "0.27.7", features = ["apple-app-store"] }
battery = "0.7.8"
anyhow = "1.0.69"
prost = "0.11.6"
base64 = "0.21.0"
bytes = "1.4.0"
photon-rs = "0.3.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
